--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e03a9b6c-d3ce-4a73-a447-3d469faaaf68"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
