--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,9 @@
               "devServerTarget": "immanuel-countries:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
